k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab-api
spec:
  selector:
    app: devops-lab-api

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
